src/objects/SF_Release_Feature__c.object
<CustomObject>
    <description>Lists the specific features included in the Salesforce major release.</description>
    <fields>
        <fullName>Application__c</fullName>
        <description>LEVEL1:  Application the release feature resides in.</description>
        <inlineHelpText>LEVEL1:  Application the release feature resides in.</inlineHelpText>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com Customization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Enhancements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce1 Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work.com</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>Sub Level 1:  Area within the application that the release feature resides in.</description>
        <inlineHelpText>Sub Level 1:  Area within the application that the release feature resides in.</inlineHelpText>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts, Contacts, and Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Customization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Enhancements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Mobile Enhancements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Mobile Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Salesforce1 Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APEX Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API Enhancements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APIs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assets Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Continuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Logic and Process Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Feed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Sets and Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Sets and Deployments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter and Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter Answers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter Questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaborative Forecasts and Opportunity Splits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communities and Customer Portal Users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Builder</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auto_Visible_All_Admins_No_Setup__c</fullName>
        <description>If the release feature is &quot;Automatically visible to all administrators.  No setup required.&quot;, then this is Yes, otherwise it is No.</description>
        <inlineHelpText>If the release feature is &quot;Automatically visible to all administrators.  No setup required.&quot;, then this is Yes, otherwise it is No.</inlineHelpText>
        <label>Auto Visible All Admins-No Setup</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auto_Visible_All_Users_No_Setup__c</fullName>
        <description>If the release feature is &quot;Automatically visible to all users.  No setup required.&quot;, then this is Yes, otherwise it is No.</description>
        <inlineHelpText>If the release feature is &quot;Automatically visible to all users.  No setup required.&quot;, then this is Yes, otherwise it is No.</inlineHelpText>
        <label>Auto Visible All Users-No Setup</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auto_Visible__c</fullName>
        <description>If the release feature is &quot;Not automatically visible.  Feature is available but requires some setup.&quot;, then this is Yes, otherwise it is No.</description>
        <inlineHelpText>If the release feature is &quot;Not automatically visible.  Feature is available but requires some setup.&quot;, then this is Yes, otherwise it is No.</inlineHelpText>
        <label>Not Auto Visible-Avail-Needs Setup</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_SFDC_to_Enable__c</fullName>
        <description>If the release feature is &quot;Contact salesforce.com to enable this feature.&quot;, then this is Yes, otherwise it is No.</description>
        <inlineHelpText>If the release feature is &quot;Contact salesforce.com to enable this feature.&quot;, then this is Yes, otherwise it is No.</inlineHelpText>
        <label>Contact SFDC to Enable</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release_Feature_Name__c</fullName>
        <description>The release feature that is included in the SFDC major release.</description>
        <inlineHelpText>The release feature that is included in the SFDC major release.</inlineHelpText>
        <label>Release Feature Name</label>
        <length>240</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Feature_URL__c</fullName>
        <description>The hyperlink to more information regarding the Release Feature.</description>
        <inlineHelpText>The hyperlink to more information regarding the Release Feature.</inlineHelpText>
        <label>Release Feature URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Reviewed_By_Name__c</fullName>
        <description>Name of the person who reviewed the release feature.</description>
        <inlineHelpText>Name of the person who reviewed the release feature.</inlineHelpText>
        <label>Reviewed By Name</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anne Quirk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isaac Oliver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kayla Olsen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kirk Adams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kirsten Stendahl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matt Hofmann</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nancy Rousslang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable to Valspar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zijian You</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reviewed_Date__c</fullName>
        <description>Date the release feature was reviewed.</description>
        <inlineHelpText>Date the release feature was reviewed.</inlineHelpText>
        <label>Reviewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <description>Has the release feature been reviewed?</description>
        <inlineHelpText>Has the release feature been reviewed?</inlineHelpText>
        <label>Reviewed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Major_Release__c</fullName>
        <description>Identifies the Major Releases that are pushed out to customers three times per year by Salesforce.</description>
        <inlineHelpText>Identifies the Major Releases that are pushed out to customers three times per year by Salesforce.</inlineHelpText>
        <label>SFDC Major Release</label>
        <referenceTo>SF_Major_Release__c</referenceTo>
        <relationshipName>SFDC_Feature_Releases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Sub_Area__c</fullName>
        <description>Sub Level 2:  Sub area of the area and application that the release feature resides in.</description>
        <inlineHelpText>Sub Level 2:  Sub area of the area and application that the release feature resides in.</inlineHelpText>
        <label>Sub Area</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts, Contacts, and Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional APIs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Customization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Enhancements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Mobile Enhancements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Mobile Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Salesforce1 Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APEX Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API Enhancements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APIs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approvals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assets Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authentication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Continuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Feed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Sets and Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Sets and Deployments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter and Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter Answers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter Questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaborative Forecasts and Opportunity Splits</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SF Release Feature</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RF-{0000000}</displayFormat>
        <label>Release Feature Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SF Release Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>